--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -9,14 +9,30 @@ on:
 jobs:
   deploy-backend:
     runs-on: self-hosted  # Sử dụng runner tự quản trên VPS
-    environment: docker   # Đây là tùy chọn không bắt buộc
     steps:
-    
+
     # Bước 1: Tải mã nguồn từ repository về VPS
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Bước 2: Thiết lập Docker Compose và khởi động container backend
+    # Bước 2: Tạo file .env với các thông tin cấu hình
+    - name: Create .env file
+      run: |
+        echo "POSTGRES_HOST=103.162.15.145" > .env
+        echo "POSTGRES_PORT=5432" >> .env
+        echo "POSTGRES_USER=postgres" >> .env
+        echo "POSTGRES_DB=vsat" >> .env
+        echo "POSTGRES_SYNC=true" >> .env
+        echo "POSTGRES_LOGGING=true" >> .env
+        echo "MONGO_URI=mongodb://localhost:27017/nest" >> .env
+        echo "MAIL_USER=vsat.center.official@gmail.com" >> .env
+        echo "ACCESS_TOKEN_KEY=${{ secrets.ACCESS_TOKEN_KEY }}" >> .env
+        echo "API_KEY=${{ secrets.API_KEY }}" >> .env
+        echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> .env
+        echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+        echo "REFRESH_TOKEN_KEY=${{ secrets.REFRESH_TOKEN_KEY }}" >> .env
+
+    # Bước 3: Thiết lập Docker Compose và khởi động container backend
     - name: Build and Deploy Backend with Docker Compose
       run: |
         docker compose down    # Dừng các container cũ
