--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -35,5 +35,5 @@ jobs:
     # Bước 3: Thiết lập Docker Compose và khởi động container backend
     - name: Build and Deploy Backend with Docker Compose
       run: |
-        sudo docker compose down    # Dừng các container cũ
-        sudo docker compose up --build -d  # Build và khởi động lại container
+        docker compose down    # Dừng các container cũ
+        docker compose up --build -d  # Build và khởi động lại container
